--- a/basic_calculation/basic_calculation/MainPage.xaml
+++ b/basic_calculation/basic_calculation/MainPage.xaml
@@ -52,7 +52,7 @@
 
 
         <Label Text="A."
-               FontSize="43"
+               FontSize="50"
                TextColor="White"
                Grid.Row="1" Grid.Column="0" Padding="20,0"/>
 
@@ -65,77 +65,81 @@
                HorizontalTextAlignment="End" 
                VerticalTextAlignment="Center"
                LineBreakMode="NoWrap" 
-               Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Padding="20,0"/>
+               Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Padding="20,0"/>
         
         
         <Button Text="7" Grid.Row="2" Grid.Column="0"
                 BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectNumber"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
         <Button Text="8" Grid.Row="2" Grid.Column="1"
                 BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectNumber"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
         <Button Text="9" Grid.Row="2" Grid.Column="2"
                 BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectNumber"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
         
         
         <Button Text="4" Grid.Row="3" Grid.Column="0"
                 BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectNumber"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
         <Button Text="5" Grid.Row="3" Grid.Column="1"
                 BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectNumber"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
         <Button Text="6" Grid.Row="3" Grid.Column="2"
                 BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectNumber"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
         
         
         <Button Text="1" Grid.Row="4" Grid.Column="0"
                 BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectNumber"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
         <Button Text="2" Grid.Row="4" Grid.Column="1"
                 BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectNumber"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
         <Button Text="3" Grid.Row="4" Grid.Column="2"
                 BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectNumber"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
         
         <Button Text="0" Grid.Row="5" Grid.Column="0" 
                 BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectNumber"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
 
         <Button Text="." Grid.Row="5" Grid.Column="1" 
                 BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectNumber"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
 
         <Button Text="□" Grid.Row="5" Grid.Column="2" 
                 BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnAnswer"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
 
         <Button Text="÷" Grid.Row="2" Grid.Column="3"
                 BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectOperator"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
         <Button Text="×" Grid.Row="3" Grid.Column="3"
                 BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectOperator"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
         <Button Text="-" Grid.Row="4" Grid.Column="3"
                 BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectOperator"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
         <Button Text="+" Grid.Row="5" Grid.Column="3"
                 BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectOperator"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
         <Button Text="/" Grid.Row="6" Grid.Column="3"
                 BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectOperator"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        
+        <Button Text="%" Grid.Row="1" Grid.Column="3"
+                BackgroundColor="Orange" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
 
 
         <Button Text="(" Grid.Row="6" Grid.Column="2"
                 BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectOperator"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
 
         <Button Text=")" Grid.Row="7" Grid.Column="2"
                 BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectOperator"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
 
         <Button Text="C" Grid.Row="6" Grid.Column="0" 
                 BackgroundColor="#808080" TextColor="White"
@@ -146,7 +150,7 @@
 
         <Button Text="=" Grid.Row="7" Grid.Column="3" 
                 BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectEqual"/>
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
 
         <Button Text="Start" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"
                 BackgroundColor="#808080" TextColor="White"
