--- a/basic_calculation/basic_calculation/MainPage.xaml
+++ b/basic_calculation/basic_calculation/MainPage.xaml
@@ -12,18 +12,20 @@
     </ContentPage.Padding>
 
     
-    <Grid Padding="5,0" RowSpacing="1" ColumnSpacing="1" BackgroundColor="Black">
+    <Grid Padding="5,0" RowSpacing="1" ColumnSpacing="1" BackgroundColor="#FFFFFF">
 
+        
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
 
         
@@ -32,10 +34,11 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
 
-        <StackLayout Grid.Row="0" Grid.ColumnSpan="4" Padding="20,0">
+        <StackLayout Grid.Row="0" Grid.ColumnSpan="5" Padding="20,0" BackgroundColor="#000000">
 
             <Entry x:Name="questionText"
                     FontSize="43"
@@ -43,18 +46,58 @@
                     CursorPosition="5"
                     TextColor="White"
                     Text="0"
-                    IsSpellCheckEnabled="false"
-                    IsTextPredictionEnabled="false"
+                    IsReadOnly="True"
                     VerticalOptions="FillAndExpand" 
                     HorizontalOptions="FillAndExpand"/>
 
         </StackLayout>
 
+        <StackLayout Grid.Row="3"  Grid.Column="0" Grid.ColumnSpan="2" Padding="20,0" BackgroundColor="#000000">
 
-        <Label Text="A."
-               FontSize="43"
+            <Entry x:Name="siginificantfigure"
+                    FontSize="40"
+                    MaxLength="1"
+                    Text="0"
+                    Placeholder="Numeric"
+                    Keyboard="Numeric"
+                    TextColor="White"
+                    VerticalOptions="Center" 
+                    HorizontalOptions="End"
+                    HorizontalTextAlignment="End"/>
+
+        </StackLayout>
+
+        <ActivityIndicator
+                     x:Name="Indicator"
+                    IsRunning="False"
+                   VerticalOptions="Fill"
+                   Grid.Row="3" Grid.Column="2" BackgroundColor="#000000" />
+
+
+        <Slider
+        Minimum="0"
+        Maximum="100"    
+        Background="Black"
+        VerticalOptions="FillAndExpand" 
+        HorizontalOptions="FillAndExpand"
+        Grid.Row="3" Grid.Column="3" Grid.RowSpan="1" Grid.ColumnSpan="2" />
+
+
+        <Label Text="Ans"
+               FontSize="17"
                TextColor="White"
-               Grid.Row="1" Grid.Column="0" Padding="20,0"/>
+               Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" Padding="20,0" BackgroundColor="#000000"
+               VerticalTextAlignment="Center"/>
+
+        <Label Text="精度"
+               FontSize="25"
+               TextColor="White"
+               Grid.Row="3" Grid.Column="0"  BackgroundColor="#000000"
+               VerticalOptions="FillAndExpand" 
+               HorizontalOptions="Center"
+               VerticalTextAlignment="Center"
+               HorizontalTextAlignment="Center"/>
+
 
 
         <Label x:Name="resultText" 
@@ -65,96 +108,96 @@
                HorizontalTextAlignment="End" 
                VerticalTextAlignment="Center"
                LineBreakMode="NoWrap" 
-               Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Padding="20,0"/>
-        
-        
-        <Button Text="7" Grid.Row="2" Grid.Column="0"
-                BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        <Button Text="8" Grid.Row="2" Grid.Column="1"
-                BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        <Button Text="9" Grid.Row="2" Grid.Column="2"
-                BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        
-        
-        <Button Text="4" Grid.Row="3" Grid.Column="0"
-                BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        <Button Text="5" Grid.Row="3" Grid.Column="1"
-                BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        <Button Text="6" Grid.Row="3" Grid.Column="2"
-                BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        
-        
-        <Button Text="1" Grid.Row="4" Grid.Column="0"
-                BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        <Button Text="2" Grid.Row="4" Grid.Column="1"
-                BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        <Button Text="3" Grid.Row="4" Grid.Column="2"
-                BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        
-        <Button Text="0" Grid.Row="5" Grid.Column="0" 
-                BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-
-        <Button Text="." Grid.Row="5" Grid.Column="1" 
-                BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-
-        <Button Text="□" Grid.Row="5" Grid.Column="2" 
-                BackgroundColor="White" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-
-        <Button Text="÷" Grid.Row="2" Grid.Column="3"
-                BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        <Button Text="×" Grid.Row="3" Grid.Column="3"
-                BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        <Button Text="-" Grid.Row="4" Grid.Column="3"
-                BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        <Button Text="+" Grid.Row="5" Grid.Column="3"
-                BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        <Button Text="/" Grid.Row="6" Grid.Column="3"
-                BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
-        
-        <Button Text="%" Grid.Row="1" Grid.Column="3"
-                BackgroundColor="Orange" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+               Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="4" Padding="20,0"/>
 
 
-        <Button Text="(" Grid.Row="6" Grid.Column="2"
-                BackgroundColor="Orange" TextColor="White"
+        <Button Text="7" Grid.Row="4" Grid.Column="0"
+                BackgroundColor="Black" TextColor="White"    
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        <Button Text="8" Grid.Row="4" Grid.Column="1"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        <Button Text="9" Grid.Row="4" Grid.Column="2"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        
+        
+        <Button Text="4" Grid.Row="5" Grid.Column="0"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        <Button Text="5" Grid.Row="5" Grid.Column="1"
+               BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        <Button Text="6" Grid.Row="5" Grid.Column="2"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        
+        
+        <Button Text="1" Grid.Row="6" Grid.Column="0"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        <Button Text="2" Grid.Row="6" Grid.Column="1"
+               BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        <Button Text="3" Grid.Row="6" Grid.Column="2"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        
+        <Button Text="0" Grid.Row="7" Grid.Column="0" 
+                BackgroundColor="Black" TextColor="White"
                 FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
 
-        <Button Text=")" Grid.Row="7" Grid.Column="2"
-                BackgroundColor="Orange" TextColor="White"
+        <Button Text="." Grid.Row="7" Grid.Column="1" 
+                BackgroundColor="Black" TextColor="White"
                 FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
 
-        <Button Text="C" Grid.Row="6" Grid.Column="0" 
-                BackgroundColor="#808080" TextColor="White"
+        <Button Text="□" Grid.Row="7" Grid.Column="2" 
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+
+        <Button Text="÷" Grid.Row="5" Grid.Column="4"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        <Button Text="×" Grid.Row="5" Grid.Column="3"
+               BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        <Button Text="-" Grid.Row="6" Grid.Column="3"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        <Button Text="+" Grid.Row="6" Grid.Column="4"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        <Button Text="/" Grid.Row="7" Grid.Column="3"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+        
+        <Button Text="%" Grid.Row="7" Grid.Column="4"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+
+
+        <Button Text="(" Grid.Row="8" Grid.Column="3"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+
+        <Button Text=")" Grid.Row="8" Grid.Column="4"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+
+        <Button Text="C" Grid.Row="4" Grid.Column="3" 
+                BackgroundColor="Black" TextColor="White"
                 FontSize="36" BorderRadius="0" Clicked="OnClear"/>
-        <Button Text="DEL" Grid.Row="6" Grid.Column="1"
-                BackgroundColor="#808080" TextColor="White"
-                FontSize="30" BorderRadius="0" Clicked="OnDel"/>
+        <Button Text="DEL" Grid.Row="4" Grid.Column="4"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="25" BorderRadius="0" Clicked="OnDel"/>
 
-        <Button Text="=" Grid.Row="7" Grid.Column="3" 
-                BackgroundColor="Orange" TextColor="White"
+        <Button Text="=" Grid.Row="8" Grid.Column="2" 
+               BackgroundColor="Black" TextColor="White"
                 FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
 
-        <Button Text="Start" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"
-                BackgroundColor="#808080" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnCalculate"/>
+        <Button Text="Start" Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2"
+                BackgroundColor="Black" TextColor="White"
+                FontSize="30" BorderRadius="0" Clicked="OnCalculate"/>
 
     </Grid>
 </ContentPage>
