--- a/basic_calculation/basic_calculation/MainPage.xaml
+++ b/basic_calculation/basic_calculation/MainPage.xaml
@@ -144,7 +144,7 @@
                 FontSize="36" BorderRadius="0" Clicked="OnClear" CornerRadius="10"/>
         <Button Text="DEL" Grid.Row="2" Grid.Column="3"
                 BackgroundColor="Yellow" TextColor="Black"
-                FontSize="Medium" BorderRadius="0" Clicked="OnDel" CornerRadius="10"/>
+                FontSize="Large" BorderRadius="0" Clicked="OnDel" CornerRadius="10"/>
 
         <Button Text="=" Grid.Row="6" Grid.Column="2" 
                 BackgroundColor="Gray" TextColor="White"
@@ -152,7 +152,7 @@
 
         <Button Text="Cal" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2"
                 BackgroundColor="Yellow" TextColor="Black"
-                FontSize="30" BorderRadius="0" Clicked="OnCalculate" CornerRadius="10"/>
+                FontSize="Large" BorderRadius="0" Clicked="OnCalculate" CornerRadius="10"/>
 
     </Grid>
 </ContentPage>
