スタート画面，エラーの修正

--- a/basic_calculation/basic_calculation/MainPage.xaml
+++ b/basic_calculation/basic_calculation/MainPage.xaml
@@ -49,7 +49,7 @@
 
 
             <Label  x:Name="SD"
-                    Text="分数" 
+                    Text="小数" 
                     HorizontalOptions="End"
                     />
 
@@ -78,9 +78,8 @@
 
 
         <Button 
-                Text="S" Grid.Row="1" Grid.Column="0"
-                BackgroundColor="#FFFFFF" TextColor="Black"
-                FontSize="Small" BorderRadius="20" Clicked="OnSelectSD"/>
+                Text="F" Grid.Row="1" Grid.Column="0" TextColor="Black"
+                FontSize="30" BorderRadius="20" Clicked="OnSelectSD" BackgroundColor="#02FFFA"/>
 
         <Button Text="7" Grid.Row="2" Grid.Column="0"
                 BackgroundColor="#B1B1B1" TextColor="White"
