--- a/basic_calculation/basic_calculation/StartPage.xaml
+++ b/basic_calculation/basic_calculation/StartPage.xaml
@@ -9,106 +9,127 @@
     <StackLayout  Orientation="Vertical">
         
         <Label Text="四則逆算計算機"
-                   Padding="0,10,0,0"
-                   FontSize="Large" 
+                   Padding="0,20,0,20" 
+                   
+                    FontSize="Large"
                    HorizontalTextAlignment="Center" 
-                   VerticalTextAlignment="Center"/>
+                   VerticalTextAlignment="Center" FontAttributes="Bold" TextType="Html" BackgroundColor="#E9FBFD" 
+                   />
 
         <StackLayout Orientation="Horizontal"
                      VerticalOptions="Center"
+                     Padding="50,0,0,10"
+                     BackgroundColor="#F8FEFF"
                      >
 
-            <Image Source="DirectionImage.jpg"
-               HeightRequest="100"
-               WidthRequest="100"/>
+            <Image Source="number.jpg"
+               HeightRequest="80"
+               WidthRequest="80"/>
 
-            <Label Text="数字ボタン"
-                   HorizontalTextAlignment="Center" 
+            <Label Text="数字"
+                   
+                   HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Center"
-                   FontSize="Medium"/>
+                   FontSize="Medium" Margin="0" IsTabStop="False" Padding="50,0,0,0" FontAttributes="Bold"/>
 
         </StackLayout>
 
 
         <StackLayout Orientation="Horizontal"
-                     VerticalOptions="Start">
+                     VerticalOptions="Start"
+                      Padding="50,0,0,15"
+                     BackgroundColor="#F8FEFF">
 
-            <Image Source="DirectionImage.jpg"
-               HeightRequest="100"
-               WidthRequest="100"/>
+            <Image Source="ope.jpg"
+               HeightRequest="80"
+               WidthRequest="80"/>
 
             <Label Text="演算子"
                    HorizontalTextAlignment="Center" 
                    VerticalTextAlignment="Center"
-                   FontSize="Medium"/>
+                   FontSize="Medium"
+                   Padding="50,0,0,0" FontAttributes="Bold"/>
 
         </StackLayout>
 
         <StackLayout Orientation="Horizontal"
-                     VerticalOptions="Start">
+                     VerticalOptions="Start"
+                      Padding="58,0,0,15"
+                     BackgroundColor="#F8FEFF">
 
-            <Image Source="DirectionImage.jpg"
-               HeightRequest="100"
-               WidthRequest="100"/>
+            <Image Source="etc.jpg"
+               HeightRequest="60"
+               WidthRequest="60"/>
             
             <StackLayout Orientation="Vertical">
                 <StackLayout Orientation="Horizontal">
-                    <Label Text="S   　    小数ボタン          "
+                    <Label Text="D   　　   小数"
                    HorizontalTextAlignment="Center" 
-                   VerticalTextAlignment="Center"/>
+                   VerticalTextAlignment="Center"
+                           Padding="50,0,0,0" FontAttributes="Bold"/>
             </StackLayout>
-                <Label Text="D　      分数ボタン"
+                <Label Text="F　      　分数"
                    HorizontalTextAlignment="Start" 
-                   VerticalTextAlignment="Center"/>
+                   VerticalTextAlignment="Center"
+                       Padding="50,0,0,0" FontAttributes="Bold"/>
                 
                 <StackLayout Orientation="Horizontal"> 
-                    <Label Text="DEL  　文字削除ボタン"
+                    <Label Text="DEL  　文字削除"
                    HorizontalTextAlignment="Center" 
-                   VerticalTextAlignment="Center"/>
+                   VerticalTextAlignment="Center"
+                           Padding="50,0,0,0" FontAttributes="Bold"/>
                 </StackLayout>
                 
-                <Label Text="C　       リセットボタン"
+                <Label Text="C　       リセット"
                    HorizontalTextAlignment="Start" 
-                   VerticalTextAlignment="Center"/>
+                   VerticalTextAlignment="Center"
+                       Padding="50,0,0,0" FontAttributes="Bold"/>
             </StackLayout>
             
         </StackLayout>
 
         <StackLayout Orientation="Horizontal"
-                     VerticalOptions="Start">
+                     VerticalOptions="Start"
+                      Padding="50,0,0,10"
+                     BackgroundColor="#F8FEFF">
 
-            <Image Source="DirectionImage.jpg"
-               HeightRequest="100"
-               WidthRequest="100"/>
+            <Image Source="x.jpg"
+               HeightRequest="70"
+               WidthRequest="70"/>
 
-            <Label Text="方程式のXなどの変数を□に"
+            <Label Text="なんて書こうかな"
                    HorizontalTextAlignment="Center" 
                    VerticalTextAlignment="Center"
-                   FontSize="Small"/>
+                   FontSize="Small"
+                   Padding="50,0,0,0" FontAttributes="Bold"/>
 
         </StackLayout>
         
         <StackLayout Orientation="Horizontal"
-                     VerticalOptions="Start">
+                     VerticalOptions="Start" Padding="50,0,0,20"
+                     BackgroundColor="#F8FEFF">
 
-            <Image Source="DirectionImage.jpg"
-               HeightRequest="100"
-               WidthRequest="100"/>
+            <Image Source="cal.jpg"
+              HeightRequest="70"
+               WidthRequest="70"/>
 
             <Label Text="計算スタート"
                    HorizontalTextAlignment="Center" 
                    VerticalTextAlignment="Center"
-                   FontSize="Medium"/>
+                   FontSize="Medium"
+                   Padding="50,0,0,0" FontAttributes="Bold"/>
 
         </StackLayout>
 
 
 
         <Button x:Name="NextButton"
-                    Text="Go Calculate" />
+                    Text="Go Calculate" FontAttributes="Bold" HorizontalOptions="Center" 
+                BackgroundColor="#E9FBFD"
+                />
         
         
-        <Label Text="注意書き"
+        <Label Text="注意書き(どーしても直せんかったエラーをここに書く？）"
                    HorizontalTextAlignment="Center" 
                    VerticalTextAlignment="Center"
                    FontSize="Medium"/>
