--- a/basic_calculation/basic_calculation/MainPage.xaml
+++ b/basic_calculation/basic_calculation/MainPage.xaml
@@ -47,13 +47,24 @@
                     VerticalOptions="FillAndExpand" 
                     HorizontalOptions="FillAndExpand" IsReadOnly="True" Keyboard="Numeric"/>
 
-            <Label  x:Name="SD"
+            <!--<Label  x:Name="SD"
                     Text="分数" 
                     TextColor="Black"
                     HorizontalOptions="End"
-                    />
+                    />-->
+
+            <Button x:Name="SD" 
+                    Text="分数" 
+                    FontSize="Small"
+                    BackgroundColor="#02FFFA" 
+                    TextColor="Black"
+                    Clicked="OnSelectSD"
+                    VerticalOptions="FillAndExpand"
+                    HorizontalOptions="End"
+                    BorderRadius="20"/>
 
         </StackLayout>
+        
 
 
 
@@ -77,9 +88,9 @@
                Grid.Row="1" Grid.Column="1" Padding="20,0"/>
 
 
-        <Button Text="D" Grid.Row="1" Grid.Column="0"
+        <!--<Button Text="D" Grid.Row="1" Grid.Column="0"
                 BackgroundColor="#02FFFA" TextColor="Black"
-                FontSize="30" BorderRadius="20" Clicked="OnSelectSD"/>
+                FontSize="30" BorderRadius="20" Clicked="OnSelectSD"/>-->
 
         <Button Text="7" Grid.Row="2" Grid.Column="0"
                 BackgroundColor="#B1B1B1" TextColor="White"
