--- a/basic_calculation/basic_calculation/MainPage.xaml
+++ b/basic_calculation/basic_calculation/MainPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             
              x:Class="basic_calculation.MainPage">
 
 
@@ -9,8 +10,10 @@
             <OnPlatform.iOS>0,20,0,0
             </OnPlatform.iOS>
         </OnPlatform>
+        
     </ContentPage.Padding>
 
+ 
 
     <Grid Padding="5,0" RowSpacing="1" ColumnSpacing="1" BackgroundColor="#FDFDFD" Visual="Default">
 
@@ -36,6 +39,7 @@
         </Grid.ColumnDefinitions>
 
 
+        
         <StackLayout Grid.Row="0" Grid.ColumnSpan="5" Padding="20,0">
 
             <Entry x:Name="questionText"
@@ -71,7 +75,7 @@
 
         <Label Text="Ans"
                BackgroundColor="White"
-               FontSize="Large"
+               FontSize="Small"
                TextColor="Black"
                VerticalTextAlignment="Center"
                Grid.Row="1" Grid.Column="0" Padding="20,0"/>
